styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&family=Salsa&display=swap');

body {
    display: grid;
    height: 100vh;
    grid-template-columns: 1fr auto;
    grid-template-rows: auto auto 1fr auto;
    margin: 0;
    text-align: center;
    font-family: "Salsa", cursive;
    color: #2E2118;
}

header {
    background: #6F734C;
    padding: 2rem;
    display: flex;
    text-align: right;
}

img {
    border-radius: 10px;
    max-width: 20%;
    height: auto;
    display: block;
    margin-left: 20%;
}

.name {
    padding-left: 50px;
    font-size: 50px;
    font-family: "Merienda", cursive;
    align-self: center;
}

nav {
    background: #AAAD85;
    padding: 1rem;
    grid-column: 1 / 3;
    font-family: "Merienda", cursive;
    font-size: 18px;
    font-style: italic;
}

a {
    color: #2E2118;
    padding: 15px;
    text-decoration: none;
}

nav a:hover,
.assignment:hover {
    color: #C44536;
}

.assignment {
    text-decoration: none;
}

main {
    height: 100%;
    padding: 1rem;
}

h2 {
    font-style: italic;
}

h3 {
    background: #C44536;
    padding: 15px;
    margin-top: 0px;
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
    font-family: "Merienda", cursive;
}

.card {
    display: block;
    width: 80%;
    margin: 15px auto;
    padding: 0px 0px 2px;
    border-style: solid;
    border-width: 2px;
    border-radius: 10px;
    border-color: #6F734C;
}

ul {
    width: 80%;
    list-style-type: none;
    text-align: left;
}

footer {
    background: #6F734C;
    padding: 2rem;
    grid-column: 1 / 3;
    font-family: "Merienda", cursive;
}

.copyright,
.author {
    text-align: left;
    padding-left: 5%;
    font-style: italic;
}

.lastModified {
    text-align: right;
    padding-right: 5%;
}

